<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    tools:context="de.lukasrost.apoplexy.HomeNavActivity"
    tools:showIn="@layout/app_bar_home_nav"
    tools:ignore="RtlHardcoded" >

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_gamification"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        card_view:cardBackgroundColor="@color/cardview_light_bg"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="@dimen/cardview_default_elev"
        card_view:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deine_ergebnisse"
            android:fontFamily="serif"/>

        <TextView
            android:id="@+id/results_gamification"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/button_results_show"
                android:textColor="#0000ff"
                android:background="@color/cardview_light_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/ergebnisse_anzeigen" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_exercises"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        card_view:cardBackgroundColor="@color/cardview_light_bg"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="@dimen/cardview_default_elev"
        card_view:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zeit_fuer_uebungen"
            android:fontFamily="serif"/>

            <TextView
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_text_exercise"
                android:fontFamily="sans-serif"
                android:drawableLeft="@drawable/ic_run_100dp"/>

            <Button
                android:id="@+id/button_exercise_start"
                android:textColor="#0000ff"
                android:background="@color/cardview_light_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/ja_sicher" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_minigame"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        card_view:cardBackgroundColor="@color/cardview_light_bg"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="@dimen/cardview_default_elev"
        card_view:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lust_auf_ein_minispiel"
                android:fontFamily="serif"/>

            <TextView
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_text_minigame"
                android:fontFamily="sans-serif"
                android:drawableLeft="@drawable/ic_videogame_100dp"/>

            <Button
                android:id="@+id/button_minigame_start"
                android:textColor="#0000ff"
                android:background="@color/cardview_light_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/ja_gerne"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
